fix(menu): resolve overlapping of components list

--- a/src/styles/shared/components/_sidenav.scss
+++ b/src/styles/shared/components/_sidenav.scss
@@ -337,7 +337,7 @@
 
 	.sidenav {
 		padding: 0;
-		margin: 24px 0 !important;
+		margin: rem(60px) 0 rem(24px) 0 !important;
 	}
 
 	.sidenav-container {
